Config my blog.

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://ixifanny.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: ixifanny
+subtitle: 博学之，审问之，慎思之，明辨之，笃行之。
+author: ixifanny
 simple_search: http://google.com/search
 description:
 
