--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: 109160999575555036829
 googleplus_hidden: false
 
 # Pinboard
@@ -98,3 +98,4 @@ google_analytics_tracking_id: UA-44233862-1
 
 # Facebook Like
 facebook_like: true
+
