--- a/_config.yml
+++ b/_config.yml
@@ -70,16 +70,16 @@ github_skip_forks: true
 
 # Twitter
 twitter_user: ixifanny
-twitter_tweet_button: true
+twitter_tweet_button: false
 
 # Google +1
-google_plus_one: true
+google_plus_one: false
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
 googleplus_user: 109160999575555036829
-googleplus_hidden: false
+googleplus_hidden: true
 
 # Pinboard
 pinboard_user:
@@ -97,5 +97,5 @@ disqus_show_comment_count: false
 google_analytics_tracking_id: UA-44233862-1
 
 # Facebook Like
-facebook_like: true
+facebook_like: false
 
